syntax = "proto3";

package video.v1;

option go_package = "github.com/bionicotaku/kratos-template/api/video/v1;videov1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// EventType 定义事件类型枚举
enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_VIDEO_CREATED = 1;
  EVENT_TYPE_VIDEO_UPDATED = 2;
  EVENT_TYPE_VIDEO_DELETED = 3;
}

// VideoCreated 表示视频创建事件
// 当一个新视频元数据被创建时发布此事件
message VideoCreated {
  string video_id = 1;                               // 视频唯一标识 (UUID)
  string uploader_id = 2;                            // 上传者标识 (UUID)
  string title = 3;                                  // 视频标题
  google.protobuf.StringValue description = 4;       // 视频描述（可选）
  google.protobuf.Int64Value duration_micros = 5;    // 视频时长（微秒）
  google.protobuf.Timestamp published_at = 6;        // 视频发布时间
  int64 version = 7;                                 // 聚合版本号
  google.protobuf.Timestamp occurred_at = 8;         // 事件发生时间
  string status = 9;                                 // 视频状态
  string media_status = 10;                          // 媒体处理状态
  string analysis_status = 11;                       // 分析状态
}

// VideoUpdated 表示视频更新事件
// 当视频元数据被更新时发布此事件
// 只包含被更新的字段（部分更新语义）
message VideoUpdated {
  string video_id = 1;                               // 视频唯一标识 (UUID)
  int64 version = 2;                                 // 新版本号
  google.protobuf.Timestamp occurred_at = 3;         // 事件发生时间

  // 以下字段为可选，仅包含实际被更新的字段
  google.protobuf.StringValue title = 10;
  google.protobuf.StringValue description = 11;
  google.protobuf.Int64Value duration_micros = 12;
  google.protobuf.StringValue status = 13;
  google.protobuf.StringValue media_status = 14;
  google.protobuf.StringValue analysis_status = 15;
  google.protobuf.StringValue thumbnail_url = 16;
  google.protobuf.StringValue hls_master_playlist = 17;
  google.protobuf.StringValue difficulty = 18;
  google.protobuf.StringValue summary = 19;
  repeated string tags = 20;
  google.protobuf.StringValue raw_subtitle_url = 21;
  google.protobuf.Timestamp published_at = 22;
}

// VideoDeleted 表示视频删除事件
// 当视频被删除时发布此事件
message VideoDeleted {
  string video_id = 1;                               // 视频唯一标识 (UUID)
  int64 version = 2;                                 // 版本号
  google.protobuf.Timestamp deleted_at = 3;          // 删除时间
  google.protobuf.Timestamp occurred_at = 4;         // 事件发生时间
  google.protobuf.StringValue reason = 5;            // 删除原因（可选）
}

// Event 是通用事件信封（Envelope）
// 用于统一封装不同类型的事件，便于序列化、传输和处理
message Event {
  string event_id = 1;                               // 事件唯一标识 (UUID)
  EventType event_type = 2;                          // 事件类型
  string aggregate_id = 3;                           // 聚合根 ID (通常是 video_id)
  string aggregate_type = 4;                         // 聚合类型（如 "video"）
  int64 version = 5;                                 // 聚合版本号
  google.protobuf.Timestamp occurred_at = 6;         // 事件发生时间

  // 使用 oneof 实现多态，根据 event_type 包含对应的 payload
  oneof payload {
    VideoCreated created = 10;
    VideoUpdated updated = 11;
    VideoDeleted deleted = 12;
  }
}
